--- a/python_code/eda_linguistics.ipynb
+++ b/python_code/eda_linguistics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "05d2c785-fc88-4b98-bdfa-6507eeafccb6",
    "metadata": {
     "scrolled": true
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "d86071be-224f-4e79-8f93-863bccaece87",
    "metadata": {},
    "outputs": [],
@@ -38,24 +38,472 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "7ce2e556-263b-4ea8-ade1-f290a9b0f7a8",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>ColumnSpec</th>\n",
+       "      <th>Patrons</th>\n",
+       "      <th>Grambank_ID_desc</th>\n",
+       "      <th>Boundness</th>\n",
+       "      <th>Flexivity</th>\n",
+       "      <th>Gender_or_Noun_Class</th>\n",
+       "      <th>Locus_of_Marking</th>\n",
+       "      <th>Word_Order</th>\n",
+       "      <th>Informativity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>GB020</td>\n",
+       "      <td>Are there definite or specific articles?</td>\n",
+       "      <td>## Are there definite or specific articles?\\r\\...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>JLA JC</td>\n",
+       "      <td>GB020 ARTDef</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>definitearticles</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>GB021</td>\n",
+       "      <td>Do indefinite nominals commonly have indefinit...</td>\n",
+       "      <td>## Do indefinite/non-specific nominals commonl...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>JLA JC</td>\n",
+       "      <td>GB021 ARTIndef</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>indef</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>GB022</td>\n",
+       "      <td>Are there prenominal articles?</td>\n",
+       "      <td>## Are there prenominal articles?\\r\\n\\r\\n## Su...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>JLA JC</td>\n",
+       "      <td>GB022 ARTPre</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>GB023</td>\n",
+       "      <td>Are there postnominal articles?</td>\n",
+       "      <td>## Are there postnominal articles?\\r\\n\\r\\n## S...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>JLA JC</td>\n",
+       "      <td>GB023 ARTPost</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>GB024</td>\n",
+       "      <td>What is the order of numeral and noun in the NP?</td>\n",
+       "      <td>## What is the order of numeral and noun in th...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>HJH</td>\n",
+       "      <td>GB024 NUMOrder</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>190</th>\n",
+       "      <td>GB433</td>\n",
+       "      <td>Can adnominal possession be marked by a suffix...</td>\n",
+       "      <td>## Can adnominal possession be marked by a suf...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>HJH</td>\n",
+       "      <td>GB433 POSSSfxPosd</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>191</th>\n",
+       "      <td>GB519</td>\n",
+       "      <td>Can mood be marked by a non-inflecting word (\"...</td>\n",
+       "      <td>## Can mood be marked by a non-inflecting word...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>HS</td>\n",
+       "      <td>GB519 MoodAuxPart</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>mood</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>192</th>\n",
+       "      <td>GB520</td>\n",
+       "      <td>Can aspect be marked by a non-inflecting word ...</td>\n",
+       "      <td>## Can aspect be marked by a non-inflecting wo...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>HS</td>\n",
+       "      <td>GB520 AspectAuxPart</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>aspect</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>193</th>\n",
+       "      <td>GB521</td>\n",
+       "      <td>Can tense be marked by a non-inflecting word (...</td>\n",
+       "      <td>## Can tense be marked by a non-inflecting wor...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>HS</td>\n",
+       "      <td>GB521 TenseAuxPart</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>tense</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>194</th>\n",
+       "      <td>GB522</td>\n",
+       "      <td>Can the S or A argument be omitted from a prag...</td>\n",
+       "      <td>## Can the S or A argument be omitted from a p...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>HJH</td>\n",
+       "      <td>GB522 PRODrop</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>195 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        ID                                               Name  \\\n",
+       "0    GB020           Are there definite or specific articles?   \n",
+       "1    GB021  Do indefinite nominals commonly have indefinit...   \n",
+       "2    GB022                     Are there prenominal articles?   \n",
+       "3    GB023                    Are there postnominal articles?   \n",
+       "4    GB024   What is the order of numeral and noun in the NP?   \n",
+       "..     ...                                                ...   \n",
+       "190  GB433  Can adnominal possession be marked by a suffix...   \n",
+       "191  GB519  Can mood be marked by a non-inflecting word (\"...   \n",
+       "192  GB520  Can aspect be marked by a non-inflecting word ...   \n",
+       "193  GB521  Can tense be marked by a non-inflecting word (...   \n",
+       "194  GB522  Can the S or A argument be omitted from a prag...   \n",
+       "\n",
+       "                                           Description  ColumnSpec Patrons  \\\n",
+       "0    ## Are there definite or specific articles?\\r\\...         NaN  JLA JC   \n",
+       "1    ## Do indefinite/non-specific nominals commonl...         NaN  JLA JC   \n",
+       "2    ## Are there prenominal articles?\\r\\n\\r\\n## Su...         NaN  JLA JC   \n",
+       "3    ## Are there postnominal articles?\\r\\n\\r\\n## S...         NaN  JLA JC   \n",
+       "4    ## What is the order of numeral and noun in th...         NaN     HJH   \n",
+       "..                                                 ...         ...     ...   \n",
+       "190  ## Can adnominal possession be marked by a suf...         NaN     HJH   \n",
+       "191  ## Can mood be marked by a non-inflecting word...         NaN      HS   \n",
+       "192  ## Can aspect be marked by a non-inflecting wo...         NaN      HS   \n",
+       "193  ## Can tense be marked by a non-inflecting wor...         NaN      HS   \n",
+       "194  ## Can the S or A argument be omitted from a p...         NaN     HJH   \n",
+       "\n",
+       "        Grambank_ID_desc  Boundness  Flexivity  Gender_or_Noun_Class  \\\n",
+       "0           GB020 ARTDef        NaN        NaN                   NaN   \n",
+       "1         GB021 ARTIndef        NaN        NaN                   NaN   \n",
+       "2           GB022 ARTPre        NaN        NaN                   NaN   \n",
+       "3          GB023 ARTPost        NaN        NaN                   NaN   \n",
+       "4         GB024 NUMOrder        NaN        NaN                   NaN   \n",
+       "..                   ...        ...        ...                   ...   \n",
+       "190    GB433 POSSSfxPosd        1.0        NaN                   NaN   \n",
+       "191    GB519 MoodAuxPart        0.0        NaN                   NaN   \n",
+       "192  GB520 AspectAuxPart        0.0        NaN                   NaN   \n",
+       "193   GB521 TenseAuxPart        0.0        NaN                   NaN   \n",
+       "194        GB522 PRODrop        NaN        NaN                   NaN   \n",
+       "\n",
+       "     Locus_of_Marking  Word_Order     Informativity  \n",
+       "0                 NaN         NaN  definitearticles  \n",
+       "1                 NaN         NaN             indef  \n",
+       "2                 NaN         0.0               NaN  \n",
+       "3                 NaN         1.0               NaN  \n",
+       "4                 NaN         NaN               NaN  \n",
+       "..                ...         ...               ...  \n",
+       "190               1.0         NaN               NaN  \n",
+       "191               NaN         NaN              mood  \n",
+       "192               NaN         NaN            aspect  \n",
+       "193               NaN         NaN             tense  \n",
+       "194               NaN         NaN               NaN  \n",
+       "\n",
+       "[195 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "gram.columns"
+    "pd.read_csv(filepath_or_buffer='C:\\\\Users\\DAIR Julia\\Desktop\\linguistics_capstone\\data\\grambank\\cldf\\parameters.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "9b276470-37e0-49ac-b60e-47ade1d75113",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Macroarea</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Glottocode</th>\n",
+       "      <th>Countries</th>\n",
+       "      <th>Family_ID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Fulniô</td>\n",
+       "      <td>South America</td>\n",
+       "      <td>-9.025910</td>\n",
+       "      <td>-37.140200</td>\n",
+       "      <td>fuln1247</td>\n",
+       "      <td>BR</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Dem</td>\n",
+       "      <td>Papunesia</td>\n",
+       "      <td>-3.721830</td>\n",
+       "      <td>137.632000</td>\n",
+       "      <td>demm1245</td>\n",
+       "      <td>ID</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Mixe-Zoque</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>16.991902</td>\n",
+       "      <td>-94.207907</td>\n",
+       "      <td>mixe1284</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Mure</td>\n",
+       "      <td>South America</td>\n",
+       "      <td>-13.636709</td>\n",
+       "      <td>-62.202091</td>\n",
+       "      <td>mure1235</td>\n",
+       "      <td>BO</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>North Halmahera</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.772624</td>\n",
+       "      <td>127.656778</td>\n",
+       "      <td>nort2923</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26664</th>\n",
+       "      <td>Kitsootso</td>\n",
+       "      <td>Africa</td>\n",
+       "      <td>-5.577220</td>\n",
+       "      <td>14.477100</td>\n",
+       "      <td>kits1250</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>atla1278</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26665</th>\n",
+       "      <td>Kindamba</td>\n",
+       "      <td>Africa</td>\n",
+       "      <td>-5.577220</td>\n",
+       "      <td>14.477100</td>\n",
+       "      <td>kind1243</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>atla1278</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26666</th>\n",
+       "      <td>Kisibemba</td>\n",
+       "      <td>Africa</td>\n",
+       "      <td>-5.577220</td>\n",
+       "      <td>14.477100</td>\n",
+       "      <td>kisi1246</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>atla1278</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26667</th>\n",
+       "      <td>Sira</td>\n",
+       "      <td>Africa</td>\n",
+       "      <td>-1.780840</td>\n",
+       "      <td>10.463500</td>\n",
+       "      <td>sira1266</td>\n",
+       "      <td>GA</td>\n",
+       "      <td>atla1278</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26668</th>\n",
+       "      <td>Barama</td>\n",
+       "      <td>Africa</td>\n",
+       "      <td>-2.496590</td>\n",
+       "      <td>10.677700</td>\n",
+       "      <td>bara1362</td>\n",
+       "      <td>GA</td>\n",
+       "      <td>atla1278</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>26669 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Name      Macroarea   Latitude   Longitude Glottocode  \\\n",
+       "0               Fulniô  South America  -9.025910  -37.140200   fuln1247   \n",
+       "1                  Dem      Papunesia  -3.721830  137.632000   demm1245   \n",
+       "2           Mixe-Zoque            NaN  16.991902  -94.207907   mixe1284   \n",
+       "3                 Mure  South America -13.636709  -62.202091   mure1235   \n",
+       "4      North Halmahera            NaN   0.772624  127.656778   nort2923   \n",
+       "...                ...            ...        ...         ...        ...   \n",
+       "26664        Kitsootso         Africa  -5.577220   14.477100   kits1250   \n",
+       "26665         Kindamba         Africa  -5.577220   14.477100   kind1243   \n",
+       "26666        Kisibemba         Africa  -5.577220   14.477100   kisi1246   \n",
+       "26667             Sira         Africa  -1.780840   10.463500   sira1266   \n",
+       "26668           Barama         Africa  -2.496590   10.677700   bara1362   \n",
+       "\n",
+       "      Countries Family_ID  \n",
+       "0            BR       NaN  \n",
+       "1            ID       NaN  \n",
+       "2           NaN       NaN  \n",
+       "3            BO       NaN  \n",
+       "4           NaN       NaN  \n",
+       "...         ...       ...  \n",
+       "26664       NaN  atla1278  \n",
+       "26665       NaN  atla1278  \n",
+       "26666       NaN  atla1278  \n",
+       "26667        GA  atla1278  \n",
+       "26668        GA  atla1278  \n",
+       "\n",
+       "[26669 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "gram.head()"
+    "glotto"
    ]
   },
   {
