--- a/python_code/languages_data_set_eda.ipynb
+++ b/python_code/languages_data_set_eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "01f1eac0-c259-4487-83bc-9bd21b5eb8e6",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,8 @@
     "import numpy as np\n",
     "from ydata_profiling import ProfileReport\n",
     "\n",
-    "languages=pd.read_csv('languages.csv')"
+    "languages=pd.read_csv('/Users/DAIR Julia/Desktop/linguistics_capstone/languages.csv')\n",
+    "families=pd.read_csv('/Users/DAIR Julia/Desktop/linguistics_capstone/families.csv')\n"
    ]
   },
   {
@@ -159,6 +160,27 @@
    ],
    "source": [
     "languages.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "ad65ed64-d8e0-49a9-b899-f3c1bbd41ec2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "296"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "families['family_id_x'].nunique()"
    ]
   },
   {
