--- a/python_code/languages_data_set_eda.ipynb
+++ b/python_code/languages_data_set_eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "01f1eac0-c259-4487-83bc-9bd21b5eb8e6",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "1b7c509d-4eae-48a7-9070-f5bcc33f20eb",
    "metadata": {},
    "outputs": [
@@ -43,6 +43,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Unnamed: 0.1</th>\n",
        "      <th>Unnamed: 0</th>\n",
        "      <th>name</th>\n",
        "      <th>macroarea</th>\n",
@@ -61,6 +62,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>Fulniô</td>\n",
        "      <td>South America</td>\n",
        "      <td>-9.025910</td>\n",
@@ -71,10 +73,11 @@
        "      <td>NaN</td>\n",
        "      <td>language</td>\n",
        "      <td>Spoken_L1_Language</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>Shifting</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>Dem</td>\n",
        "      <td>Papunesia</td>\n",
@@ -86,10 +89,11 @@
        "      <td>NaN</td>\n",
        "      <td>language</td>\n",
        "      <td>Spoken_L1_Language</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>Shifting</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>Mixe-Zoque</td>\n",
        "      <td>NaN</td>\n",
@@ -101,10 +105,11 @@
        "      <td>NaN</td>\n",
        "      <td>family</td>\n",
        "      <td>Family</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>no status</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>Mure</td>\n",
        "      <td>South America</td>\n",
@@ -116,10 +121,11 @@
        "      <td>NaN</td>\n",
        "      <td>language</td>\n",
        "      <td>Spoken_L1_Language</td>\n",
-       "      <td>6.0</td>\n",
+       "      <td>Extinct</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>4</td>\n",
        "      <td>North Halmahera</td>\n",
        "      <td>NaN</td>\n",
@@ -131,29 +137,36 @@
        "      <td>NaN</td>\n",
        "      <td>family</td>\n",
        "      <td>Family</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>no status</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0             name      macroarea   latitude   longitude  \\\n",
-       "0           0           Fulniô  South America  -9.025910  -37.140200   \n",
-       "1           1              Dem      Papunesia  -3.721830  137.632000   \n",
-       "2           2       Mixe-Zoque            NaN  16.991902  -94.207907   \n",
-       "3           3             Mure  South America -13.636709  -62.202091   \n",
-       "4           4  North Halmahera            NaN   0.772624  127.656778   \n",
+       "   Unnamed: 0.1  Unnamed: 0             name      macroarea   latitude  \\\n",
+       "0             0           0           Fulniô  South America  -9.025910   \n",
+       "1             1           1              Dem      Papunesia  -3.721830   \n",
+       "2             2           2       Mixe-Zoque            NaN  16.991902   \n",
+       "3             3           3             Mure  South America -13.636709   \n",
+       "4             4           4  North Halmahera            NaN   0.772624   \n",
        "\n",
-       "  glottocode countries family_id lineage     level            category  aes  \n",
-       "0   fuln1247        BR       NaN     NaN  language  Spoken_L1_Language  3.0  \n",
-       "1   demm1245        ID       NaN     NaN  language  Spoken_L1_Language  3.0  \n",
-       "2   mixe1284       NaN       NaN     NaN    family              Family  NaN  \n",
-       "3   mure1235        BO       NaN     NaN  language  Spoken_L1_Language  6.0  \n",
-       "4   nort2923       NaN       NaN     NaN    family              Family  NaN  "
+       "    longitude glottocode countries family_id lineage     level  \\\n",
+       "0  -37.140200   fuln1247        BR       NaN     NaN  language   \n",
+       "1  137.632000   demm1245        ID       NaN     NaN  language   \n",
+       "2  -94.207907   mixe1284       NaN       NaN     NaN    family   \n",
+       "3  -62.202091   mure1235        BO       NaN     NaN  language   \n",
+       "4  127.656778   nort2923       NaN       NaN     NaN    family   \n",
+       "\n",
+       "             category        aes  \n",
+       "0  Spoken_L1_Language   Shifting  \n",
+       "1  Spoken_L1_Language   Shifting  \n",
+       "2              Family  no status  \n",
+       "3  Spoken_L1_Language    Extinct  \n",
+       "4              Family  no status  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "dd762d8c-3109-445c-b392-d44bee42a468",
    "metadata": {},
    "outputs": [],
